Publii: update content

--- a/search.html
+++ b/search.html
@@ -6,7 +6,7 @@
                gcse.src   = 'https://cse.google.com/cse.js?cx=' + cx;
                var s = document.getElementsByTagName('script')[0];
                s.parentNode.insertBefore(gcse, s);
-            })();</script><gcse:searchresults-only></gcse:searchresults-only></div></article></main><footer class="footer"><div class="footer__copyright">Hier könnte ihre Werbung stehen! <a href="../../../../impressum">Legales Gedöns</a> haben wir auch!</div><button class="footer__bttop js-footer__bttop" aria-label="Back to top"><svg><title>Back to top</title><use xlink:href="./assets/svg/svg-map.svg#toparrow"/></svg></button></footer></div><script>window.publiiThemeMenuConfig = {    
+            })();</script><gcse:searchresults-only></gcse:searchresults-only></div></article></main><footer class="footer"><div class="footer__copyright"><p>Hier könnte ihre Werbung stehen! <a href="../../../../impressum">Legales Gedöns</a> (Impressum) haben wir auch!</p></div><button class="footer__bttop js-footer__bttop" aria-label="Back to top"><svg><title>Back to top</title><use xlink:href="./assets/svg/svg-map.svg#toparrow"/></svg></button></footer></div><script>window.publiiThemeMenuConfig = {    
         mobileMenuMode: 'overlay',
         animationSpeed: 300,
         submenuWidth: 'auto',
